--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8888:8888"
       - "4040-4080:4040-4080"
     volumes:
-      - ../:/home/jovyan/work/notebooks/
+      - ./:/home/jovyan/work/notebooks/
 
 networks:
   default_net:
